updated progress of 30-05-2023

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             <td>https://renusreeja.github.io/</td>
             <td>First Task Done</td>
         </tr>
+        <tr>
+            <td>2</td>
+            <td>30-05-2023</td>
+            <td>Case Insensitive Palindrome, Check Anagrams, Two Sum, Exclusion Product, Balancing Parantheses, Rotated Sorted Array Search</td>
+            <td>https://ideone.com/nBcLZK, https://ideone.com/7houfi, https://ideone.com/JOIJfx, https://ideone.com/oS1Ji1, https://ideone.com/Ak1d57, https://ideone.com/Qn5XR1</td>
+            <td>Worked on different approaches for solving a problem</td>
+        </tr>
     </table>
     <script src="site.js"></script>
 </body>
