--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             <td>https://ideone.com/nBcLZK, https://ideone.com/7houfi, https://ideone.com/JOIJfx, https://ideone.com/oS1Ji1, https://ideone.com/Ak1d57, https://ideone.com/Qn5XR1</td>
             <td>Worked on different approaches for solving a problem</td>
         </tr>
+        <tr>
+            <td>3</td>
+            <td>01-06-2023</td>
+            <td>Group Anagrams, Merge Two Sorted Lists, List Cycle, Contains Duplicates</td>
+            <td>https://ideone.com/sszvQh, https://ideone.com/vaUHuN, https://ideone.com/yjYh5k, https://ideone.com/ktIhJK</td>
+            <td>Worked on Optimizing code</td>
+        </tr>
     </table>
     <script src="site.js"></script>
 </body>
