--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
             <td>https://ideone.com/sszvQh, https://ideone.com/vaUHuN, https://ideone.com/yjYh5k, https://ideone.com/ktIhJK</td>
             <td>Worked on Optimizing code</td>
         </tr>
+        <tr>
+            <td>4</td>
+            <td>02-06-2023</td>
+            <td>Length of Longest SubStr with Distinct Chars, Best Time to Buy and Sell Stock, Reverse Linked List</td>
+            <td>https://ideone.com/LH25jY, https://ideone.com/S4PQQq, https://ideone.com/8HUoOk</td>
+            <td>Worked to optimize time complexity</td>
+        </tr>
     </table>
     <script src="site.js"></script>
 </body>
