--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
             <td>https://ideone.com/LH25jY, https://ideone.com/S4PQQq, https://ideone.com/8HUoOk</td>
             <td>Worked to optimize time complexity</td>
         </tr>
+        <tr>
+            <td>5</td>
+            <td>03-06-2023</td>
+            <td>Find Minimum in Rotated Sorted Array, Climbing Stairs, Missing Number, Rotation of Matrix</td>
+            <td>https://ideone.com/EIARu3, https://ideone.com/z8vemS, https://ideone.com/9bkLtp, https://ideone.com/7d9SlR</td>
+            <td>Worked on different test cases</td>
+        </tr>
     </table>
     <script src="site.js"></script>
 </body>
