Linked user card to index

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <td>Worked on different test cases</td>
         </tr>
     </table>
+    <a href="usercard.html">User Card</a>
     <script src="site.js"></script>
 </body>
 </html>
