--- a/usercard.html
+++ b/usercard.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <h2>User Card1</h2>
-        <div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbZpRNiXIlAEtQCXDJ3ehxXhjdGiAWKM2IKt_OTlHALA&usqp=CAU&ec=48665701">
-            <div>
+        <div class="card">
+            <img class="cardimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbZpRNiXIlAEtQCXDJ3ehxXhjdGiAWKM2IKt_OTlHALA&usqp=CAU&ec=48665701">
+            <div class="cardbody">
                 <h4>Mahesh Babu</h4>
                 <p>Actor</p>
             </div>
