added font style

--- a/usercard.html
+++ b/usercard.html
@@ -14,7 +14,7 @@
             <img class="cardimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbZpRNiXIlAEtQCXDJ3ehxXhjdGiAWKM2IKt_OTlHALA&usqp=CAU&ec=48665701">
             <div class="cardbody">
                 <h4>Mahesh Babu</h4>
-                <p>Actor</p>
+                <p class="cardbody-designation">Actor</p>
             </div>
         </div>
     </div>
