added user card 2

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <td>Worked on different test cases</td>
         </tr>
     </table>
-    <a href="usercard.html">User Card</a>
+    <a href="usercard.html">User Card1</a>
+    <a href="usercard2.html">User Card2</a>
     <script src="site.js"></script>
 </body>
 </html>
