--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
             <td>https://ideone.com/EIARu3, https://ideone.com/z8vemS, https://ideone.com/9bkLtp, https://ideone.com/7d9SlR</td>
             <td>Worked on different test cases</td>
         </tr>
+        <tr>
+            <td>6</td>
+            <td>05-06-2023</td>
+            <td>Remove Nth Node from List End, Top K Frequent Elements, Merging Overlapping Intervals</td>
+            <td>https://ideone.com/jUlE5L, https://ideone.com/kfguSP, https://ideone.com/DrVODH</td>
+            <td>Solved 3 problems and created a user card</td>
+        </tr>
     </table>
     <a href="usercard.html">User Card1</a>
     <a href="usercard2.html">User Card2</a>
