--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
             <td>https://ideone.com/jUlE5L, https://ideone.com/kfguSP, https://ideone.com/DrVODH</td>
             <td>Solved 3 problems and created a user card</td>
         </tr>
+        <tr>
+            <td>7</td>
+            <td>06-06-2023</td>
+            <td>Number of Islands, Number of Connected Components</td>
+            <td>https://ideone.com/9WKW26, https://ideone.com/Bk6hxf</td>
+            <td>Solved 2 problems</td>
+        </tr>
     </table>
     <a href="usercard.html">User Card1</a>
     <a href="usercard2.html">User Card2</a>
