--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
             <td>https://ideone.com/9WKW26, https://ideone.com/Bk6hxf</td>
             <td>Solved 2 problems</td>
         </tr>
+        <tr>
+            <td>8</td>
+            <td>08-06-2023</td>
+            <td>Height of BST, Are Trees Identical, Jump Game, Unique Paths</td>
+            <td>https://ideone.com/Teqofo, https://ideone.com/dj0ebv, https://ideone.com/EGT1YQ, https://ideone.com/cWakh4</td>
+            <td>Solved 4 problems</td>
+        </tr>
     </table>
     <a href="usercard.html">User Card1</a>
     <a href="usercard2.html">User Card2</a>
