--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
             <td>https://ideone.com/Teqofo, https://ideone.com/dj0ebv, https://ideone.com/EGT1YQ, https://ideone.com/cWakh4</td>
             <td>Solved 4 problems</td>
         </tr>
+        <tr>
+            <td>9</td>
+            <td>09-06-2023</td>
+            <td>Count Set Bits, Sum without using Plus and Minus</td>
+            <td>https://ideone.com/9WUkXZ, https://ideone.com/Y9LavC</td>
+            <td>Solved 2 problems</td>
+        </tr>
     </table>
     <a href="usercard.html">User Card1</a>
     <a href="usercard2.html">User Card2</a>
