--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
             <td>https://ideone.com/9WUkXZ, https://ideone.com/Y9LavC</td>
             <td>Solved 2 problems</td>
         </tr>
+        <tr>
+            <td>10</td>
+            <td>12-06-2023</td>
+            <td>Longest Consecutive Sequence, Spiral Traversal of Matrix, Set Matrix Zeroes</td>
+            <td>https://ideone.com/kV0rhK, https://ideone.com/0TIDVs, https://ideone.com/07ODZu</td>
+            <td>Solved 3 problems</td>
+        </tr>
     </table>
     <a href="usercard.html">User Card1</a>
     <a href="usercard2.html">User Card2</a>
