--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
             <td>https://ideone.com/xnZ3cG, https://ideone.com/bg9TTt, https://ideone.com/GbY4cd</td>
             <td>Solved 3 problems and created a user card using API</td>
         </tr>
+        <tr>
+            <td>12</td>
+            <td>15-06-2023</td>
+            <td>Counting Bits, Subtree of Another Tree</td>
+            <td>https://ideone.com/StUfVU, https://ideone.com/o5CPv1</td>
+            <td>Solved 2 problems</td>
+        </tr>
     </table>
     <a href="usercard.html">User Card 1</a>
     <a href="usercard2.html">User Card 2</a>
