--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
             <td>https://ideone.com/jqQJ4V, https://ideone.com/eLCjlM, https://ideone.com/1rz6Uh</td>
             <td>Solved 3 problems</td>
         </tr>
+        <tr>
+            <td>14</td>
+            <td>17-06-2023</td>
+            <td>Min Coins to Make Change, Maximum Depth of a binary tree</td>
+            <td>https://ideone.com/Kf8sPR, https://ideone.com/PdqSgW</td>
+            <td>Solved 2 problems</td>
+        </tr>
     </table>
     <a href="usercard.html">User Card 1</a>
     <a href="usercard2.html">User Card 2</a>
